--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 MYSQL_USER=root
 MYSQL_PASS=Avinash123
 MYSQL_HOST=localhost
+MYSQL_HOST_GO=mysql-db
 MYSQL_PORT=3306
 MYSQL_DB_NAME=url_shortner
+APP_PORT=8080
