--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MYSQL_USER=root
 MYSQL_PASS=Avinash123
-MYSQL_HOST=localhost
+MYSQL_HOST=mysql
 MYSQL_HOST_GO=mysql-db
 MYSQL_PORT=3306
 MYSQL_DB_NAME=url_shortner
